# Kenshi-Online

./: .gitignore  AGENTS.md  README.md  build.bat  install.bat  package-release.bat
KenshiMP.Core/: CMakeLists.txt  core.cpp
KenshiMP.Core/game/: shared_save_sync.cpp
KenshiMP.Core/hooks/: entity_hooks.cpp
KenshiMP.Server/: CMakeLists.txt  server.cpp  upnp.cpp  upnp.h
